--- a/www/index.html
+++ b/www/index.html
@@ -147,8 +147,16 @@
 
 		<div class="view" id="view-name" data-view-fixed="0">
 			<div class="top-bar">
-				<div class="title-full-width">
+				<div class="icon-beside-title">
+					<i class="fa fa-angle-left"></i>
+				</div>
+
+				<div class="title-beside-icons">
 					<label data-i18n="view-name.title"></label>
+				</div>
+
+				<div class="icon-beside-title">
+
 				</div>
 			</div>
 
