New commit - No comments provided

--- a/www/index.html
+++ b/www/index.html
@@ -124,7 +124,9 @@
 		<div class="view" id="settings" data-view-fixed="0">
 			<div class="top-bar">
 				<div class="icon-beside-title">
-					<i class="fa fa-angle-left"></i>
+					<div class="icon-container">
+						<i class="fa fa-angle-left"></i>
+					</div>
 				</div>
 
 				<div class="title-beside-icons">
