New commit - No comments provided

--- a/www/index.html
+++ b/www/index.html
@@ -137,7 +137,7 @@
 			</div>
 
 			<div id="settings-nav">
-				<div class="full-width-row">
+				<div class="full-width-row row-with-top-margin">
 					<label data-i18n="settings.search-radius"></label>
 				</div>
 
@@ -145,7 +145,7 @@
 					<input id="settings-pre-ser-val" type="text" />
 				</div>
 
-				<div class="full-width-row centered">
+				<div class="full-width-row row-with-top-margin centered">
 					<input id="save-settings" onclick="" type="button" data-i18n="[value]settings.save" />
 				</div>
 			</div>
