--- a/www/index.html
+++ b/www/index.html
@@ -142,8 +142,23 @@
 				</div>
 
 				<div class="full-width-row">
-					<input id="settings-pre-ser-val" type="text" />
+					<input id="settings-pre-sea-rad" type="text" />
 				</div>
+
+				<!-- ***** -->
+
+				<div class="full-width-row row-with-top-margin">
+					<label data-i18n="settings.preferred-unit"></label>
+				</div>
+
+				<div class="full-width-row">
+					<select id="settings-pre-sea-uni">
+						<option id="set-pre-sea-uni-kil" value=""></option>
+						<option id="set-pre-sea-uni-mil" value=""></option>
+					</select>
+				</div>
+
+				<!-- ***** -->
 
 				<div class="full-width-row row-with-top-margin centered">
 					<input id="save-settings" onclick="" type="button" data-i18n="[value]settings.save" />
