New commit - No comments provided

--- a/www/index.html
+++ b/www/index.html
@@ -153,8 +153,8 @@
 
 				<div class="full-width-row">
 					<select id="settings-pre-sea-uni">
-						<option id="set-pre-sea-uni-kil" value=""></option>
-						<option id="set-pre-sea-uni-mil" value=""></option>
+						<option data-i18n="settings.search-radius-unit-kilometers" id="set-pre-sea-uni-kil" value=""></option>
+						<option data-i18n="settings.search-radius-unit-miles" id="set-pre-sea-uni-mil" value=""></option>
 					</select>
 				</div>
 
