--- a/www/index.html
+++ b/www/index.html
@@ -153,10 +153,18 @@
 
 				<div class="full-width-row">
 					<select id="settings-pre-sea-uni">
-						<option data-i18n="settings.search-radius-unit-kilometers" id="set-pre-sea-uni-kil" value=""></option>
-						<option data-i18n="settings.search-radius-unit-miles" id="set-pre-sea-uni-mil" value=""></option>
+						<option data-i18n="settings.search-unit-kilometers" id="set-pre-sea-uni-kil" value=""></option>
+						<option data-i18n="settings.search-unit-miles" id="set-pre-sea-uni-mil" value=""></option>
 					</select>
 				</div>
+
+				<!-- ***** -->
+
+				<div class="full-width-row row-with-top-margin">
+					<label data-i18n="settings.preferred-language"></label>
+				</div>
+
+				
 
 				<!-- ***** -->
 
