Commit of missing changes

--- a/www/index.html
+++ b/www/index.html
@@ -164,7 +164,9 @@
 					<label data-i18n="settings.preferred-language"></label>
 				</div>
 
-				
+				<div class="full-width-row">
+
+				</div>
 
 				<!-- ***** -->
 
