--- a/www/index.html
+++ b/www/index.html
@@ -213,11 +213,13 @@
 
 					/* ***** */
 
-					require.config({
+					app.showAlert(require, null, "require", "ok");
+
+					/*require.config({
 						baseUrl: "js"
 					});
 
-					app.require = require;
+					app.require = require;*/
 
 					/* ***** */
 
