--- a/www/index.html
+++ b/www/index.html
@@ -213,13 +213,13 @@
 
 					/* ***** */
 
-					app.showAlert(require, null, "require", "ok");
-
-					/*require.config({
+					require.config({
 						baseUrl: "js"
 					});
 
-					app.require = require;*/
+					app.showAlert(require, null, "require", "ok");
+
+					/*app.require = require;*/
 
 					/* ***** */
 
