--- a/www/index.html
+++ b/www/index.html
@@ -209,6 +209,8 @@
 			 */
 			$(window).load(
 				function() {
+					localStorage.setItem("vet_dir_setting_preferred_language", null);
+
 					$("#splash-screen").css("opacity", 1);
 
 					/* ***** */
