--- a/www/index.html
+++ b/www/index.html
@@ -217,7 +217,9 @@
 
 					/* ***** */
 
+					app.showAlert(app.bcp_47, null, "app.bcp_47 - 1", "ok");
 					app.bcp_47 = bcp_47;
+					app.showAlert(app.bcp_47, null, "app.bcp_47 - 2", "ok");
 
 					/* ***** */
 
