--- a/www/index.html
+++ b/www/index.html
@@ -213,13 +213,13 @@
 
 					/* ***** */
 
-					localStorage.clear();
+					//localStorage.clear();
 
 					/* ***** */
 
-					app.showAlert(app.bcp_47, null, "app.bcp_47 - 1", "ok");
+					app.showAlert(bcp_47, null, "bcp_47", "ok");
+
 					app.bcp_47 = bcp_47;
-					app.showAlert(app.bcp_47, null, "app.bcp_47 - 2", "ok");
 
 					/* ***** */
 
