Test with weinre

--- a/www/index.html
+++ b/www/index.html
@@ -194,6 +194,8 @@
 
 		<script type="text/javascript" src="cordova.js"></script>
 
+		<script type="text/javascript" src="http://192.168.0.15:1234/target/target-script-min.js#anonymous"></script>
+
 		<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 
 		<!-- http://i18next.com/pages/doc_init.html -->
@@ -217,7 +219,7 @@
 
 					/* ***** */
 
-					app.showAlert(bcp_47, null, "bcp_47", "ok");
+					console.dir(bcp_47);
 
 					app.bcp_47 = bcp_47;
 
