--- a/www/index.html
+++ b/www/index.html
@@ -124,7 +124,7 @@
 		<div class="view" id="settings" data-view-fixed="0">
 			<div class="top-bar">
 				<div class="icon-beside-title">
-					<i class="fa fa-angle-left"></i>
+					<i class="fa fa-angle-left" id="settings-back-link"></i>
 				</div>
 
 				<div class="title-beside-icons">
