--- a/www/index.html
+++ b/www/index.html
@@ -165,7 +165,10 @@
 				</div>
 
 				<div class="full-width-row">
-
+					<select id="settings-pre-lan">
+						<option data-i18n="settings.language-english" id="set-pre-lan-eng" value=""></option>
+						<option data-i18n="settings.language-spanish" id="set-pre-lan-spa" value=""></option>
+					</select>
 				</div>
 
 				<!-- ***** -->
