--- a/www/index.html
+++ b/www/index.html
@@ -206,6 +206,8 @@
 
 		<script type="text/javascript" src="js/modules/bcp_47.js"></script>
 
+		<script type="text/javascript" src="js/modules/google/geocode.js"></script>
+
 		<script type="text/javascript" src="js/index.js"></script>
 		
 		<script type="text/javascript">
@@ -219,6 +221,8 @@
 					//localStorage.clear();
 
 					app.bcp_47 = bcp_47;
+
+					app.google_geocode = google_geocode;
 
 					app.initialize();
 				}
