--- a/www/index.html
+++ b/www/index.html
@@ -197,7 +197,7 @@
 
 		<script type="text/javascript" src="cordova.js"></script>
 
-		<script type="text/javascript" src="http://192.168.0.15:1234/target/target-script-min.js#anonymous"></script>
+		<!--<script type="text/javascript" src="http://192.168.0.15:1234/target/target-script-min.js#anonymous"></script>-->
 
 		<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 
