--- a/www/index.html
+++ b/www/index.html
@@ -218,7 +218,7 @@
 				function() {
 					$("#splash-screen").css("opacity", 1);
 
-					localStorage.clear();
+					//localStorage.clear();
 
 					app.bcp_47 = bcp_47;
 
