--- a/www/index.html
+++ b/www/index.html
@@ -181,6 +181,20 @@
 
 		<!-- ***** -->
 
+		<div class="view" id="result-list" data-view-fixed="0">
+			<div class="top-bar">
+				<div class="title-full-width">
+					<label data-i18n="result-list.title"></label>
+				</div>
+			</div>
+
+			<div id="result-list-nav">
+
+			</div>
+		</div>
+
+		<!-- ***** -->
+
 		<div class="view" id="view-name" data-view-fixed="0">
 			<div class="top-bar">
 				<div class="title-full-width">
