--- a/www/index.html
+++ b/www/index.html
@@ -187,7 +187,7 @@
 					<i class="fa fa-angle-left" id="result-list__back-link"></i>
 				</div>
 
-				<div class="title-full-width">
+				<div class="title-beside-icons">
 					<label data-i18n="result-list.title"></label>
 				</div>
 
