--- a/www/index.html
+++ b/www/index.html
@@ -222,6 +222,8 @@
 
 		<script type="text/javascript" src="js/views/result-list.js"></script>
 
+		<script type="text/javascript" src="js/views/settings.js"></script>
+
 		<script type="text/javascript" src="js/index.js"></script>
 
 		<script type="text/javascript">
@@ -242,6 +244,9 @@
 
 					app.resultList = resultList;
 					app.resultList.app = app;
+
+					app.settings = settings;
+					app.settings.app = app;
 
 					app.initialize();
 				}
